--- a/nav/vizsgak.html
+++ b/nav/vizsgak.html
@@ -96,9 +96,9 @@
             </article>
           </div>
 
-          <h1>Érettségi vizsga</h1>
+          <h1>Érettségi vizsga (digitális kultúra)</h1>
 
-          <h3>Szövegszerkesztés</h3>
+          <h3>Szövegszerkesztés (közép / emelt)</h3>
           <div class="vizs">
             <aside>
 
@@ -107,7 +107,8 @@
               <p><a href="#">Feladat</a></p>
             </article>
           </div>
-          <h3>Táblázatkezelés</h3>
+
+          <h3>Táblázatkezelés (közép / emelt)</h3>
           <div class="vizs">
             <aside>
 
@@ -116,7 +117,8 @@
               <p><a href="#">Feladat</a></p>
             </article>
           </div>
-          <h3>Prezentációkészítés</h3>
+
+          <h3>Prezentációkészítés (közép / emelt)</h3>
           <div class="vizs">
             <aside>
 
@@ -127,6 +129,16 @@
           </div>
 
           <h1>Szakmai vizsga</h1>
+
+          <h3>Informatikai rendszerüzemeltető - IT alapok (szóbeli)</h3>
+          <div class="vizs">
+            <aside>
+
+            </aside>
+            <article>
+              <p><a href="https://www.nive.hu/Downloads/vizsga/komplex_szakmai_vizsga_szobeli_vizsgafeladatai/DL.php?f=5448106_A_Informatikai%20rendszeruzemelteto_20170308.pdf">Tételsor</a></p>
+            </article>
+          </div>
 
           <h3>Informatikai rendszer- és alkalmazásüzemeltető technikus szakmai ismeret (központi interaktív vizsga)</h3>
           <div class="vizs">
