--- a/ptt/egyebos.html
+++ b/ptt/egyebos.html
@@ -47,7 +47,7 @@
           </nav>
         </div>
             
-        <main>
+        <main class="ptt">
           <h1>Egyéb operációs rendszerek (mobil és MacOS)</h1>
 
           <p>A témakör a mobileszközökön elterjedt két legfontosabb operációs rendszer, az Android és az iOS jellemzőit tárgyalja. A tanulóknak ismerniük kell a két rendszer kezelőfelületét, az alapvető beállításokat és szolgáltatásokat (pl. GPS, virtuális asszisztensek, VPN stb.), valamint az alapvető biztonsági beállításokat is. Ezenfelül a macOS operációs rendszer alapvető tulajdonságaival is tisztában kell lenniük. A témakör elsajátítását követően a tanuló:</p>
@@ -63,9 +63,5 @@
             <li>Képes a macOS frissítésére.</li>
           </ul>
         </main>
-
-        <div style="clear:both;"></div>
-
-        <script src="../static/accordion.js"></script>
       </body>
     </html>
