--- a/index.html
+++ b/index.html
@@ -76,7 +76,16 @@
           <p><a href="ptt/nyomtatok.html">Nyomtatók és egyéb perifériák (2+8 óra)</a></p>
         </aside>
         <article>
+          <a href="okt/okt.html">Oktatási anyagok</a>
+          <a href="okt/szamtechtortenet.html">A számítástechnika története</a>
+        </article>
+      </section>
+
+      <section>
+        <aside>
           <h2>Központi egység</h2>
+        </aside>
+        <article>
           <a href="kozpontiegyseg/logmuv.html">Logikai műveletek és kifejezések</a>
           <a href="kozpontiegyseg/logkapu.html">Logikai kapuk és áramkörök</a>
           <a href="kozpontiegyseg/aritcirc.html">Aritmetikai áramkörök</a>
@@ -84,8 +93,13 @@
           <a href="kozpontiegyseg/tarcirc.html">Tároló áramkörök</a>
           <a href="https://www.inf.u-szeged.hu/~tanacs/oktatas/szamitogep_architekturak_gd/index.html" target="_blank">Számítógép-architektúrák</a>
           <a href="https://www.falstad.com/circuit/" target="_blank">Falstad - Circuit Simulator Applet</a>
-  
+        </article>
+      </section>
+      <section>
+        <aside>
           <h2>Gépház</h2>
+        </aside>
+        <article>
           <a href="hardver/htmagn.html">Háttértárak</a>
           <a href="hardver/alaplap.html">Alaplap</a>
           <a href="hardver/kartyak.html">Hangkártya, videokártya, hálózati kártya</a>
@@ -94,8 +108,13 @@
           <a href="hardver/haz.html">Ház</a>
           <a href="hardver/pc.html">Személyi számítógép</a>
           <a href="hardver/biosuefi.html">BIOS, UEFI</a>
-  
+        </article>
+      </section>
+      <section>
+        <aside>
           <h2>Perifériák</h2>
+        </aside>
+        <article>
           <a href="perif/bill.html">Billentyűzet</a>
           <a href="perif/eger.html">Egér, touchpad</a>
           <a href="perif/printer.html">Nyomtató</a>
@@ -106,13 +125,16 @@
           <a href="perif/digitabla.html">Digitális tábla</a>
           <a href="https://www.youtube.com/playlist?list=PL5S7QW1qtdUC7531m0OaQ5ucsC89yvoq5" target="_blank">AnonimInc. - Perifériák</a>
           <a href="https://www.youtube.com/playlist?list=PL5S7QW1qtdUAIprVHAPmgt5C-rvEvKURC" target="_blank">AnonimInc. - Mobil kiegészítők</a>
-  
+        </article>
+      </section>
+      <section>
+        <aside>
           <h2>Okoseszközök</h2>
+        </aside>
+        <article>
           <a href="okos/okostelefon.html">Okostelefonok</a>
-  
-          <h2>Oktatási anyagok</h2>
-          <a href="okt/okt.html">Oktatási anyagok</a>
-          <a href="okt/szamtechtortenet.html">A számítástechnika története</a>
+          <a href="#">Okosóra</a>
+          <a href="#">Okosotthon</a>
         </article>
       </section>
 
