--- a/office/kttszoveg.html
+++ b/office/kttszoveg.html
@@ -51,15 +51,18 @@
           <h1>Haladó szintű szövegszerkesztési ismeretek</h1>
 
           <p>A témakör a szövegszerkesztő program és a szöveges dokumentumok által kínált haladó szintű lehetőségek bemutatására szolgál az alábbi felsorolásnak megfelelő tartalommal.</p>
-          <p>Szövegszerkesztő program kezelőfelülete, fájlformátumok:</p>
+
+          <h3>Szövegszerkesztő program kezelőfelülete, fájlformátumok:</h3>
           <ul><li>szöveges dokumentum formátumok</li></ul>
-          <p>Navigációs lehetőségek a szöveges dokumentumon belül:</p>
+
+          <h3>Navigációs lehetőségek a szöveges dokumentumon belül:</h3>
           <ul>
             <li>keresési lehetőségek egy dokumentumon belül szöveg vagy formátum megadásával;</li>
             <li>dokumentumok különböző nézetei;</li>
             <li>hivatkozások, könyvjelzők.</li>
           </ul>
-          <p>Dokumentum haladó szintű formázása, kezelése:</p>
+
+          <h3>Dokumentum haladó szintű formázása, kezelése:</h3>
           <ul>
             <li>oldalbeállítások, szakaszok, többhasábos tördelések;</li>
             <li>karakterekhez és bekezdésekhez kapcsolódó haladó szintű beállítások;</li>
@@ -69,20 +72,23 @@
             <li>speciális karakterek, szövegtörési pontok, automatikus javítás;</li>
             <li>jelszóvédelem lehetőségei, alkalmazási területei.</li>
           </ul>
-          <p>Nagyméretű dokumentumok kezelése:</p>
+
+          <h3>Nagyméretű dokumentumok kezelése:</h3>
           <ul>
             <li>fejezetek, szakaszok, címek, alcímek;</li>
             <li>lábjegyzetek, végjegyzetek, irodalomjegyzék;</li>
             <li>tartalomjegyzék, ábrajegyzék, képjegyzék, számozások.</li>
           </ul>
-          <p>Objektumok a szöveges dokumentumban:</p>
+
+          <h3>Objektumok a szöveges dokumentumban:</h3>
           <ul>
             <li>képek, ábrák, alakzatok;</li>
             <li>diagramok, szervezeti diagramok;</li>
             <li>képletszerkesztő;</li>
             <li>táblázatok haladó szintű formázása, táblázatokban használható képletek.</li>
           </ul>
-          <p>Makrók:</p>
+
+          <h3>Makrók:</h3>
           <ul>
             <li>makrórögzítés, billentyűparancs hozzárendelése;</li>
             <li>makrók, makrókhoz kapcsolódó utasításkód szerkesztése, módosítása;</li>
