--- a/office/ktttablazat.html
+++ b/office/ktttablazat.html
@@ -50,17 +50,20 @@
         <main>
           <h1>Haladó szintű táblázatkezelési ismeretek</h1>
           <p>A témakör a táblázatkezelő program lehetőségeinek és a táblázatok által kínált haladó szintű lehetőségek bemutatására szolgál az alábbi felsorolásnak megfelelő tartalommal.</p>
-          <p>Táblázatkezelő program kezelőfelülete, fájlformátumok:</p>
+
+          <h3>Táblázatkezelő program kezelőfelülete, fájlformátumok:</h3>
           <ul>
             <li>munkafüzet natív formátumai;</li>
             <li>importálási lehetőségek más formátumú források felhasználásával;</li>
           </ul>
-          <p>Navigációs lehetőségek a táblázaton belül:</p>
+
+          <h3>Navigációs lehetőségek a táblázaton belül:</h3>
           <ul>
             <li>keresés munkafüzetekben;</li>
             <li>hivatkozások, könyvjelzők, név mezők.</li>
           </ul>
-          <p>Táblázatok haladó szintű formázása, kezelése:</p>
+
+          <h3>Táblázatok haladó szintű formázása, kezelése:</h3>
           <ul>
             <li>oldalbeállítások;</li>
             <li>sorok, oszlopok beszúrása, törlése, elrejtése, megjelenítése;</li>
@@ -73,7 +76,8 @@
             <li>munkafüzet tulajdonságainak használati lehetőségei, egyéni mezők használata;</li>
             <li>munkalap és munkafüzet jelszavas védelmének lehetőségei, alkalmazási területei.</li>
           </ul>
-          <p>Képletek, függvények:</p>
+
+          <h3>Képletek, függvények:</h3>
           <ul>
             <li>hivatkozások (relatív, abszolút, vegyes) célszerű alkalmazása;</li>
             <li>hivatkozás másik munkalapra, másik munkafüzetre;</li>
@@ -81,22 +85,26 @@
             <li>összesítések, részösszegek létrehozási lehetőségei;</li>
             <li>függvények, egymásba ágyazott függvények kezelése, szabályai.</li>
           </ul>
-          <p>Szűrés, rendezés:</p>
+
+          <h3>Szűrés, rendezés:</h3>
           <ul>
             <li>irányított szűrések készítésének lehetőségi, szabályai;</li>
             <li>rendezés egy, illetve több oszlop tartalma szerint;</li>
             <li>duplikátumok eltávolítási lehetőségei.</li>
           </ul>
-          <p>Objektumok beillesztése:</p>
+
+          <h3>Objektumok beillesztése:</h3>
           <ul><li>képek, ábrák, alakzatok;</li></ul>
-          <p>Diagramok létrehozása, formázása</p>
+
+          <h3>Diagramok létrehozása, formázása</h3>
           <ul>
             <li>grafikonok és diagramok;</li>
             <li>diagramstílusok;</li>
             <li>diagramok tulajdonságai;</li>
             <li>sor- és oszlopadatok alkalmazása.</li>
           </ul>
-          <p>Makrók használata:</p>
+
+          <h3>Makrók használata:</h3>
           <ul>
             <li>makrórögzítés, billentyűparancs hozzárendelése;</li>
             <li>makrók, makrókhoz kapcsolódó utasításkód szerkesztése, módosítása;</li>
