--- a/hardver/binary.html
+++ b/hardver/binary.html
@@ -41,6 +41,7 @@
                   <a href="../mikro/robotika.html">Robotika</a>
                   <a href="../mikro/dron.html">Drónok</a>
                   <a href="../mikro/mlnnai1.html">Mesterséges intelligencia</a>
+                  <a href="../mikro/kvantumszg.html">Kvantumszámítógép</a>
                 </div>
             </div>
             <a href="../nav/vizsgak.html">Vizsgák</a>
