--- a/mikro/robotika.html
+++ b/mikro/robotika.html
@@ -41,6 +41,7 @@
               <a href="#">Robotika</a>
               <a href="dron.html">Drónok</a>
               <a href="mlnnai1.html">Mesterséges intelligencia</a>
+              <a href="kvantumszg.html">Kvantumszámítógép</a>
             </div>
         </div>
         <a href="../nav/vizsgak.html">Vizsgák</a>
