--- a/mikro/dron.html
+++ b/mikro/dron.html
@@ -41,6 +41,7 @@
               <a href="robotika.html">Robotika</a>
               <a href="#">Drónok</a>
               <a href="mlnnai1.html">Mesterséges intelligencia</a>
+              <a href="kvantumszg.html">Kvantumszámítógép</a>
             </div>
         </div>
         <a href="../nav/vizsgak.html">Vizsgák</a>
