--- a/office/szoveg.html
+++ b/office/szoveg.html
@@ -44,6 +44,7 @@
             </div>
         </div>
         <a href="../nav/vizsgak.html">Vizsgák</a>
+        <a href="../mikro/kvantumszg.html">Kvantumszámítógép</a>
           </nav>
         </div>
             
