--- a/index.html
+++ b/index.html
@@ -50,10 +50,11 @@
       <h1>Üdvözöllek a Palkotikum Technologies nyitóoldalán!</h1>
       <p>Weboldalunk azért jött létre, hogy feldolgozza az informatikai és távközlési alapok I. és II. tantárgy tananyagait, amelyek a számítógépes alapismereteket tartalmazzák.</p>
       <p>A Projektek menüpont alatti gyakorlati programjainkhoz várjuk a diákok jelentkezését.</p>
+      <p><a href="okt/okt.html">Oktatási anyagok</a></p>
+      <p><a href="okt/szamtechtortenet.html">A számítástechnika története</a></p>
     </div>
 
     <main>
-      <h1>Alapismeretek</h1>
       <section>
         <aside>
           <h2>Informatikai és távközlési alapok</h2>
@@ -67,21 +68,7 @@
         </article>
       </section>
 
-      <h1>Hardver</h1>
-      <section>
-        <aside>
-          <h2>Informatikai és távközlési alapok</h2>
-          <p><a href="ptt/pc.html">A PC része, PC szét- és összeszerelése, bővítése (2+10 óra)</a></p>
-          <p><a href="ptt/karbhiba.html">Megelőző karbantartás és hibakeresés (2+8 óra)</a></p>
-          <p><a href="ptt/laptopok.html">Laptopok és más eszközök tulajdonságai, hibakeresés (2+8 óra)</a></p>
-          <p><a href="ptt/nyomtatok.html">Nyomtatók és egyéb perifériák (2+8 óra)</a></p>
-        </aside>
-        <article>
-          <a href="okt/okt.html">Oktatási anyagok</a>
-          <a href="okt/szamtechtortenet.html">A számítástechnika története</a>
-        </article>
-      </section>
-
+      <h1>Számítógép-architektúrák</h1>
       <section>
         <aside>
           <h2>Központi egység</h2>
@@ -96,9 +83,14 @@
           <a href="https://www.falstad.com/circuit/" target="_blank">Falstad - Circuit Simulator Applet</a>
         </article>
       </section>
+
+      <h1>Személyi számítógép</h1>
       <section>
         <aside>
           <h2>Gépház</h2>
+          <p><a href="ptt/pc.html">A PC része, PC szét- és összeszerelése, bővítése (2+10 óra)</a></p>
+          <p><a href="ptt/karbhiba.html">Megelőző karbantartás és hibakeresés (2+8 óra)</a></p>
+          <p><a href="ptt/laptopok.html">Laptopok és más eszközök tulajdonságai, hibakeresés (2+8 óra)</a></p>
         </aside>
         <article>
           <a href="hardver/htmagn.html">Háttértárak</a>
@@ -114,6 +106,7 @@
       <section>
         <aside>
           <h2>Perifériák</h2>
+          <p><a href="ptt/nyomtatok.html">Nyomtatók és egyéb perifériák (2+8 óra)</a></p>
         </aside>
         <article>
           <a href="perif/bill.html">Billentyűzet</a>
@@ -128,9 +121,11 @@
           <a href="https://www.youtube.com/playlist?list=PL5S7QW1qtdUAIprVHAPmgt5C-rvEvKURC" target="_blank">AnonimInc. - Mobil kiegészítők</a>
         </article>
       </section>
+
+      <h1>Okoseszközök</h1>
       <section>
         <aside>
-          <h2>Okoseszközök</h2>
+          
         </aside>
         <article>
           <a href="okos/okostelefon.html">Okostelefonok</a>
