--- a/index.html
+++ b/index.html
@@ -84,6 +84,24 @@
         </article>
       </section>
 
+      <section>
+        <aside>
+          <h2>Szuperszámítógép</h2>
+        </aside>
+        <article>
+
+        </article>
+      </section>
+
+      <section>
+        <aside>
+          <h2>Kvantumszámítógép</h2>
+        </aside>
+        <article>
+
+        </article>
+      </section>
+
       <h1>Személyi számítógép</h1>
       <section>
         <aside>
@@ -122,18 +140,6 @@
         </article>
       </section>
 
-      <h1>Okoseszközök</h1>
-      <section>
-        <aside>
-          
-        </aside>
-        <article>
-          <a href="okos/okostelefon.html">Okostelefonok</a>
-          <a href="#">Okosóra</a>
-          <a href="#">Okosotthon</a>
-        </article>
-      </section>
-
       <h1>Operációs rendszerek</h1>
       <section>
         <aside>
@@ -155,6 +161,18 @@
           <a href="rendszer/android.html">Android</a>
           <a href="rendszer/unix.html">Unix</a>
           <a href="rendszer/virt.html">Virtuális gépek és konténerek</a>
+        </article>
+      </section>
+
+      <h1>Okoseszközök</h1>
+      <section>
+        <aside>
+          
+        </aside>
+        <article>
+          <a href="okos/okostelefon.html">Okostelefonok</a>
+          <a href="#">Okosóra</a>
+          <a href="#">Okosotthon</a>
         </article>
       </section>
 
