--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@
       <section>
         <aside>
           <h2>Központi egység</h2>
+          <p><a href="https://www.inf.u-szeged.hu/~tanacs/oktatas/szamitogep_architekturak_gd/index.html" target="_blank">Számítógép-architektúrák <i class="fa fa-external-link"></i></a></p>
+          <p><a href="https://www.falstad.com/circuit/" target="_blank">Falstad - Circuit Simulator Applet <i class="fa fa-external-link"></i></a></p>
         </aside>
         <article>
           <a href="kozpontiegyseg/logmuv.html">Logikai műveletek és kifejezések</a>
@@ -79,8 +81,6 @@
           <a href="kozpontiegyseg/aritcirc.html">Aritmetikai áramkörök</a>
           <a href="kozpontiegyseg/cpu.html">CPU</a>
           <a href="kozpontiegyseg/tarcirc.html">Tároló áramkörök</a>
-          <a href="https://www.inf.u-szeged.hu/~tanacs/oktatas/szamitogep_architekturak_gd/index.html" target="_blank">Számítógép-architektúrák</a>
-          <a href="https://www.falstad.com/circuit/" target="_blank">Falstad - Circuit Simulator Applet</a>
         </article>
       </section>
 
@@ -125,6 +125,8 @@
         <aside>
           <h2>Perifériák</h2>
           <p><a href="ptt/nyomtatok.html">Nyomtatók és egyéb perifériák (2+8 óra)</a></p>
+          <p><a href="https://www.youtube.com/playlist?list=PL5S7QW1qtdUC7531m0OaQ5ucsC89yvoq5" target="_blank">AnonimInc. - Perifériák <i class="fa fa-external-link"></i></a></p>
+          <p><a href="https://www.youtube.com/playlist?list=PL5S7QW1qtdUAIprVHAPmgt5C-rvEvKURC" target="_blank">AnonimInc. - Mobil kiegészítők <i class="fa fa-external-link"></i></a></p>
         </aside>
         <article>
           <a href="perif/bill.html">Billentyűzet</a>
@@ -135,8 +137,6 @@
           <a href="perif/fenyk.html">Fényképező & kamera</a>
           <a href="perif/scanner.html">Scanner</a>
           <a href="perif/digitabla.html">Digitális tábla</a>
-          <a href="https://www.youtube.com/playlist?list=PL5S7QW1qtdUC7531m0OaQ5ucsC89yvoq5" target="_blank">AnonimInc. - Perifériák</a>
-          <a href="https://www.youtube.com/playlist?list=PL5S7QW1qtdUAIprVHAPmgt5C-rvEvKURC" target="_blank">AnonimInc. - Mobil kiegészítők</a>
         </article>
       </section>
 
