--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
         <aside>
           <h2>Központi egység</h2>
           <p><a href="https://www.inf.u-szeged.hu/~tanacs/oktatas/szamitogep_architekturak_gd/index.html" target="_blank">Számítógép-architektúrák <i class="fa fa-external-link"></i></a></p>
+          <p><a href="https://www.youtube.com/playlist?list=PL-0Sm209resg6npAY367UUnDT_QfThPJj" target="_blank">Mingesz Róbert - Digitális architektúrák <i class="fa fa-external-link"></i></a></p>
           <p><a href="https://www.falstad.com/circuit/" target="_blank">Falstad - Circuit Simulator Applet <i class="fa fa-external-link"></i></a></p>
         </aside>
         <article>
