--- a/hardver/nummat.html
+++ b/hardver/nummat.html
@@ -33,16 +33,7 @@
             <a href="../nav/rolunk.html">Rólunk</a>
         <a href="#">Blog</a>
         <a href="../nav/peldak.html">Példák</a>
-        <div class="dropdown">
-          <a href="#">Projektek</a>
-            <div class="dropdown-content">
-              <a href="../mikro/bevelektr.html">Mikroelektronika</a>
-              <a href="../mikro/robotika.html">Robotika</a>
-              <a href="../mikro/dron.html">Drónok</a>
-              <a href="../mikro/mlnnai1.html">Mesterséges intelligencia</a>
-              <a href="../mikro/kvantumszg.html">Kvantumszámítógép</a>
-            </div>
-        </div>
+        <a href="#">Projektek</a>
         <a href="../nav/vizsgak.html">Vizsgák</a>
           </nav>
         </div>
@@ -122,9 +113,8 @@
           <p><a href="https://drive.google.com/file/d/1xRGysi-Ce0hWAkGO5Ke2h-TIGMjcGoOw/view?usp=sharing" target=_blank>10. A közönséges differenciálegyenletek peremérték-feladatainak numerikus módszerei</a></p>
           <p><a href="https://drive.google.com/file/d/1Fc8ZO8QyLfXLTwyoIdZGulxSbKKfapQI/view?usp=sharing" target=_blank>11. A parciális differenciálegyenletek numerikus módszerek</a></p>
         </main>
-        
-        <div style="clear:both;"></div>
-        
-        <script src="../static/accordion.js"></script>
+        <footer>
+          <img src="../static/cc.logo.large.png" alt="cc">
+        </footer>
       </body>
     </html>
