--- a/hardver/pc.html
+++ b/hardver/pc.html
@@ -32,16 +32,7 @@
       <a href="../nav/rolunk.html">Rólunk</a>
         <a href="#">Blog</a>
         <a href="../nav/peldak.html">Példák</a>
-        <div class="dropdown">
-          <a href="#">Projektek</a>
-            <div class="dropdown-content">
-              <a href="../mikro/bevelektr.html">Mikroelektronika</a>
-              <a href="../mikro/robotika.html">Robotika</a>
-              <a href="../mikro/dron.html">Drónok</a>
-              <a href="../mikro/mlnnai1.html">Mesterséges intelligencia</a>
-              <a href="../mikro/kvantumszg.html">Kvantumszámítógép</a>
-            </div>
-        </div>
+        <a href="#">Projektek</a>
         <a href="../nav/vizsgak.html">Vizsgák</a>
       </nav>
     </div>
@@ -90,9 +81,8 @@
     <p><a href="https://drive.google.com/file/d/1FvBXZhsWvV8BThkONZsndInXSJMl_sav/view?usp=sharing" target=_blank>Mátyás János: Számítástechnikai szoftverek</a></p>
     <p><a href="https://drive.google.com/file/d/1HIB8qw_bD0qc98a-O1kVh4WC-xifnFM6/view?usp=sharing" target=_blank>Király László: Mérések, mérőprogramok</a></p>
     </main>
-    
-    <div style="clear:both;"></div>
-    
-    <script src="../static/accordion.js"></script>
+    <footer>
+      <img src="../static/cc.logo.large.png" alt="cc">
+    </footer>
   </body>
 </html>
