--- a/index.html
+++ b/index.html
@@ -31,16 +31,7 @@
         <a href="nav/rolunk.html">Rólunk</a>
         <a href="#">Blog</a>
         <a href="nav/peldak.html">Példák</a>
-        <div class="dropdown">
-          <a href="#">Projektek</a>
-            <div class="dropdown-content">
-              <a href="mikro/bevelektr.html">Mikroelektronika</a>
-              <a href="mikro/robotika.html">Robotika</a>
-              <a href="mikro/dron.html">Drónok</a>
-              <a href="mikro/mlnnai1.html">Mesterséges intelligencia</a>
-              <a href="mikro/kvantumszg.html">Kvantumszámítógép</a>
-            </div>
-        </div>
+        <a href="#">Projektek</a>
         <a href="nav/vizsgak.html">Vizsgák</a>
       </nav>
     </div>
@@ -54,11 +45,9 @@
     </div>
 
     <main>
-      <h1>Számítógép-architektúrák</h1>
       <section>
         <aside>
-          <h2>Informatikai és távközlési alapok</h2>
-          <p><a href="ptt/bevelektr.html">Bevezetés az elektronikába (2+26 óra)</a></p>
+          <h2>Elmélet</h2>
         </aside>
         <article>
           <a href="hardver/infelm.html">Információelmélet</a>
@@ -89,7 +78,8 @@
           <h2>Szuperszámítógép</h2>
         </aside>
         <article>
-
+          <a href="#">Szuperszámítógép</a>
+          <a href="#">CRAY</a>
         </article>
       </section>
 
@@ -98,14 +88,13 @@
           <h2>Kvantumszámítógép</h2>
         </aside>
         <article>
-
+          <a href="mikro/kvantumszg.html">Kvantumszámítógép</a>
         </article>
       </section>
 
-      <h1>Személyi számítógép</h1>
       <section>
         <aside>
-          <h2>Gépház</h2>
+          <h2>Személyi számítógép | Gépház</h2>
           <p><a href="ptt/pc.html">A PC része, PC szét- és összeszerelése, bővítése (2+10 óra)</a></p>
           <p><a href="ptt/karbhiba.html">Megelőző karbantartás és hibakeresés (2+8 óra)</a></p>
           <p><a href="ptt/laptopok.html">Laptopok és más eszközök tulajdonságai, hibakeresés (2+8 óra)</a></p>
@@ -123,7 +112,7 @@
       </section>
       <section>
         <aside>
-          <h2>Perifériák</h2>
+          <h2>Személyi számítógép | Perifériák</h2>
           <p><a href="ptt/nyomtatok.html">Nyomtatók és egyéb perifériák (2+8 óra)</a></p>
           <p><a href="https://www.youtube.com/playlist?list=PL5S7QW1qtdUC7531m0OaQ5ucsC89yvoq5" target="_blank">AnonimInc. - Perifériák <i class="fa fa-external-link"></i></a></p>
           <p><a href="https://www.youtube.com/playlist?list=PL5S7QW1qtdUAIprVHAPmgt5C-rvEvKURC" target="_blank">AnonimInc. - Mobil kiegészítők <i class="fa fa-external-link"></i></a></p>
@@ -140,17 +129,14 @@
         </article>
       </section>
 
-      <h1>Operációs rendszerek</h1>
       <section>
         <aside>
-          <h2>Informatikai és távközlési alapok</h2>
+          <h2>Operációs rendszerek</h2>
           <p><a href="ptt/virt.html">Virtualizáció és felhőtechnológiák (3+12 óra)</a></p>
           <p><a href="ptt/windows.html">Windows telepítése és konfigurációja (3+12 óra)</a></p>
           <p><a href="ptt/egyebos.html">Egyéb operációs rendszerek (mobil és MacOS) (3+3 óra)</a></p>
           <p><a href="ptt/linux.html">Linux alapok (7+11 óra)</a></p>
-
-          <h2>Irodai informatikus</h2>
-          <p><a href="#">Linux alapismeretek</a></p>
+          <p><a href="#">Linux alapismeretek (irodai informatikus)</a></p>
         </aside>
         <article>
           <a href="rendszer/os.html">Operációs rendszerek</a>
@@ -164,10 +150,9 @@
         </article>
       </section>
 
-      <h1>Okoseszközök</h1>
       <section>
         <aside>
-          
+          <h2>Okoseszközök</h2>
         </aside>
         <article>
           <a href="okos/okostelefon.html">Okostelefonok</a>
@@ -176,10 +161,9 @@
         </article>
       </section>
 
-      <h1>Irodai szoftverek</h1>
       <section>
         <aside>
-          <h2>Irodai informatikus</h2>
+          <h2>Irodai szoftverek</h2>
           <p><a href="office/kttszoveg.html">Haladó szintű szövegszerkesztési ismeretek</a></p>
           <p><a href="office/ktttablazat.html">Haladó szintű táblázatkezelési ismeretek</a></p>
           <p><a href="office/kttint.html">Irodai szoftverek integrált használata</a></p>
@@ -192,6 +176,38 @@
           <a href="office/texlatex.html">TeX / LaTeX</a>
         </article>
       </section>
+
+      <section>
+        <aside>
+          <h2>Elektronika</h2>
+          <p><a href="ptt/bevelektr.html">Bevezetés az elektronikába (2+26 óra)</a></p>
+        </aside>
+        <article>
+          <a href="mikro/bevelektr.html">Mikroelektronika</a>
+          <a href="mikro/arduino.html">Arduino</a>
+          <a href="mikro/raspberry.html">Raspberry</a>
+          <a href="#">MicroBit</a>
+          <a href="mikro/robotika.html">Robotika</a>
+          <a href="mikro/dron.html">Drónok</a>
+        </article>
+      </section>
+
+      <section>
+        <aside>
+          <h2>Mesterséges intelligencia</h2>
+          <p><a href="ptt/mlnnai.html">Gépi tanulás, neuronhálózatok, mesterséges intelligencia (4+6 óra)</a></p>
+        </aside>
+        <article>
+          <a href="#">Statisztika</a>
+          <a href="mestint/ai.html">Mesterséges intelligencia</a>
+          <a href="mestint/ml.html">Gépi tanulás</a>
+          <a href="mestint/nn.html">Neuronhálózatok</a>
+          <a href="mestint/pyai.html">Python nyelven</a>
+        </article>
+      </section>
     </main>
+    <footer>
+      <img src="static/cc.logo.large.png" alt="cc">
+    </footer>
   </body>
 </html>
