--- a/mestint/nn.html
+++ b/mestint/nn.html
@@ -31,28 +31,18 @@
           </header>
           <nav>
             <a href="../nav/rolunk.html">Rólunk</a>
-        <a href="#">Blog</a>
-        <a href="../nav/peldak.html">Példák</a>
-        <a href="#">Projektek</a>
-        <a href="../nav/vizsgak.html">Vizsgák</a>
+            <a href="#">Blog</a>
+            <a href="../nav/peldak.html">Példák</a>
+            <a href="#">Projektek</a>
+            <a href="../nav/vizsgak.html">Vizsgák</a>
           </nav>
         </div>
             
         <main>
-            <h1>Segédprogramok</h1>
+          <h1>Neuronhálózatok</h1>
 
-            <p>BalenaEtcher</p>
-            <p>BurnAwareFree</p>
-            <p>TotalCommander</p>
-            <p>DoubleCommander</p>
-            <p>CCleaner</p>
-            <p>CPUID CPU-Z</p>
-            <p>FreshDiagnose</p>
-            <p>GParted</p>
-            <p>MiniTool Partition Wizard</p>
-            <p>Fájlrendszerező</p>
-            <p>Kell egy olyan program, ami úgy rendszerezi az adatokat, mint egy weboldal, de nem a neten van, hanem a gépen. A Word túl egysíkú ehhez; egy olyan program kell, aminek komplex struktúrája van, egyfajta adatbázis, elsősorban kis feljegyzések tárolására, de ezekből nagyon sok van, ezért kell őket rendszerezni.</p>
-            <p>Az adatok (állományok) struktúrája egy soklaphoz hasonló, az átlóival: minden állományközi kapcsolatot meg kell adni, hogy a keresés könnyű legyen.</p>
+          <h3>Neurális hálók elmélete</h3>
+          <p>Neurális hálókkal megoldható feladatok. A neurális hálók típusai Tanítás tanítóval és tanító nélkül. A többrétegű perceptron (MLP) felépítése és tanítása. Aktivációs függvények és veszteségfüggvények. Error-back-propagation. Gradiens módszer, konjugált gradiens módszer, kvázi Newton-módszerek, a Levenberg-Marquardt-módszer. Az MLP tulajdonságai. Radiális bázis hálózatok (RBF). Büntető függvények. Regularizáció. Általánosított radiális bázis hálózatok. Magfüggvényes approximációk. Mély tanulási technikák. Autoencoder. Tartó vektor gépek (SVM). Az optimális hipersík. SVM szeparálásra és függvényközelítésre. A konvolúciós hálózat felépítése és használata. Az error-backpropagation konvolúciós hálózatra. Rekurrens hálózatok. Long short-term memory.</p>
         </main>
         <footer>
           <img src="../static/cc.logo.large.png" alt="cc">
