--- a/mikro/raspberry.html
+++ b/mikro/raspberry.html
@@ -38,23 +38,14 @@
           </nav>
         </div>
             
-        <main class="ptt">
-          <h1>Nyomtatók és egyéb perifériák</h1>
+        <main>
+            <h1>Raspberry</h1>
 
-          <p>A témakörben a tanulók a nyomtatók típusaival, jellemzőivel, telepítésével és beállításaival ismerkednek meg, és képet alkotnak a további ki- és beviteli perifériákról is. A témakör elsajátítását követően a tanuló:</p>
-          <ul>
-            <li>Fel tudja sorolni a hagyományos és a modern beviteli eszközöket, és képes azok használatára.</li>
-            <li>Ismeri a nyomtatók típusait, működési elvét, és össze tudja hasonlítani azokat.</li>
-            <li>Képes lapolvasásra és nyomtatásra multifunkciós nyomtatókkal.</li>
-            <li>Képes nyomtatókat és lapolvasókat telepíteni, beállítani és hálózaton megosztani.</li>
-            <li>Ismeri a nyomtatószerverek alkalmazási lehetőségeit, és használni is tudja azokat.</li>
-            <li>Képes a nyomtatók teljesítményének javítására szoftveres beállításokkal, valamint memóriabővítéssel.</li>
-            <li>Ismeri a virtuális nyomtatókat és képes azok használatára, valamint ismeri a 3D nyomtatók működési elvét.</li>
-            <li>Fel tudja sorolni a szkennerek típusait, tisztában van a működési elvükkel, és képes dokumentumok beolvasására.</li>
-            <li>Ismeri a megjelenítők típusait, paramétereit és alapvető működési elvét.</li>
-            <li>Ismeri a virtuális valóság (VR és AR) megjelenítőeszközeit.</li>
-            <li>Ismeri a hangeszközök beállításait, a hangszórók csatlakoztatási módját.</li>
-          </ul>
+            <p><a href="https://www.malnasuli.hu/" target="_blank">MálnaSuli</a></p>
+            <p><a href="https://www.malnasuli.hu/category/python/" target="_blank">MálnaSuli - Python</a></p>
+        
+            <h3>R-Sorozat - index iskolatévé Raspberry Pi egyveleg</h3>
+            <p><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/videoseries?list=PLdK9JLdh5kw2JKzUeZoszIGsELPLOXfGc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
         </main>
         <footer>
           <img src="../static/cc.logo.large.png" alt="cc">
