--- a/okt/okt.html
+++ b/okt/okt.html
@@ -33,16 +33,7 @@
             <a href="../nav/rolunk.html">Rólunk</a>
         <a href="#">Blog</a>
         <a href="../nav/peldak.html">Példák</a>
-        <div class="dropdown">
-          <a href="#">Projektek</a>
-            <div class="dropdown-content">
-              <a href="../mikro/bevelektr.html">Mikroelektronika</a>
-              <a href="../mikro/robotika.html">Robotika</a>
-              <a href="../mikro/dron.html">Drónok</a>
-              <a href="../mikro/mlnnai1.html">Mesterséges intelligencia</a>
-              <a href="../mikro/kvantumszg.html">Kvantumszámítógép</a>
-            </div>
-        </div>
+        <a href="#">Projektek</a>
         <a href="../nav/vizsgak.html">Vizsgák</a>
           </nav>
         </div>
@@ -168,9 +159,8 @@
             <p><a href="https://drive.google.com/file/d/17M7UIKxiuWmbHzSt-XAxl3x3noFtmke3/view?usp=sharing" target=_blank>115. SQL DCL</a></p>
             <p><a href="https://drive.google.com/file/d/10yPJnGGNahDZHoCWV9_1BQKN8MRF3lhu/view?usp=sharing" target=_blank>116-117. Számítógép felépítése</a></p>
         </main>
-            
-        <div style="clear:both;"></div>
-            
-        <script src="../static/accordion.js"></script>
+        <footer>
+          <img src="../static/cc.logo.large.png" alt="cc">
+        </footer>
       </body>
     </html>
