--- a/rendszer/windows.html
+++ b/rendszer/windows.html
@@ -33,16 +33,7 @@
             <a href="../nav/rolunk.html">Rólunk</a>
         <a href="#">Blog</a>
         <a href="../nav/peldak.html">Példák</a>
-        <div class="dropdown">
-          <a href="#">Projektek</a>
-            <div class="dropdown-content">
-              <a href="../mikro/bevelektr.html">Mikroelektronika</a>
-              <a href="../mikro/robotika.html">Robotika</a>
-              <a href="../mikro/dron.html">Drónok</a>
-              <a href="../mikro/mlnnai1.html">Mesterséges intelligencia</a>
-              <a href="../mikro/kvantumszg.html">Kvantumszámítógép</a>
-            </div>
-        </div>
+        <a href="#">Projektek</a>
         <a href="../nav/vizsgak.html">Vizsgák</a>
           </nav>
         </div>
@@ -98,9 +89,8 @@
           <p><a href="https://pcworld.hu/pcwlite/igy-nezd-meg-hogy-milyen-drivereket-frissitett-utoljara-a-windows-249854.html" target=_blank>Így nézd meg, hogy milyen drivereket frissített utoljára a Windows</a></p>
           <p><a href="https://www.origo.hu/techbazis/20090611-mindent-elarul-tulajdonosarol-a-windows-ha-okosan-kerdezik.html" target=_blank>Mindent tud a Windows a tulajdonosáról</a></p>
         </main>
-            
-        <div style="clear:both;"></div>
-            
-        <script src="../static/accordion.js"></script>
+        <footer>
+          <img src="../static/cc.logo.large.png" alt="cc">
+        </footer>
       </body>
     </html>
