--- a/kozpontiegyseg/logmuv.html
+++ b/kozpontiegyseg/logmuv.html
@@ -33,16 +33,7 @@
             <a href="../nav/rolunk.html">Rólunk</a>
         <a href="#">Blog</a>
         <a href="../nav/peldak.html">Példák</a>
-        <div class="dropdown">
-          <a href="#">Projektek</a>
-            <div class="dropdown-content">
-              <a href="../mikro/bevelektr.html">Mikroelektronika</a>
-              <a href="../mikro/robotika.html">Robotika</a>
-              <a href="../mikro/dron.html">Drónok</a>
-              <a href="../mikro/mlnnai1.html">Mesterséges intelligencia</a>
-              <a href="../mikro/kvantumszg.html">Kvantumszámítógép</a>
-            </div>
-        </div>
+        <a href="#">Projektek</a>
         <a href="../nav/vizsgak.html">Vizsgák</a>
           </nav>
         </div>
@@ -97,9 +88,8 @@
             <p><a href="https://drive.google.com/file/d/1oVFbGE2TtnMYp6nnSDCWOeru8JqleWOo/view?usp=sharing" target=_blank>6. Gentzen kalkulusai</a></p>
             <p><a href="https://drive.google.com/file/d/1_JszP2IlTcvg0aqUasQy3QknS7zRotOl/view?usp=sharing" target=_blank>7. A rezolúciós kalkulus</a></p>
         </main>
-            
-        <div style="clear:both;"></div>
-            
-        <script src="../static/accordion.js"></script>
+        <footer>
+          <img src="../static/cc.logo.large.png" alt="cc">
+        </footer>
       </body>
     </html>
