--- a/mikro/dron.html
+++ b/mikro/dron.html
@@ -33,16 +33,7 @@
             <a href="../nav/rolunk.html">Rólunk</a>
         <a href="#">Blog</a>
         <a href="../nav/peldak.html">Példák</a>
-        <div class="dropdown">
-          <a href="#">Projektek</a>
-            <div class="dropdown-content">
-              <a href="bevelektr.html">Mikroelektronika</a>
-              <a href="robotika.html">Robotika</a>
-              <a href="#">Drónok</a>
-              <a href="mlnnai1.html">Mesterséges intelligencia</a>
-              <a href="kvantumszg.html">Kvantumszámítógép</a>
-            </div>
-        </div>
+        <a href="#">Projektek</a>
         <a href="../nav/vizsgak.html">Vizsgák</a>
           </nav>
         </div>
@@ -53,9 +44,8 @@
             <h3>Digitális Témahét - Drónok az oktatásban?</h3>
             <p><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/pGGjvOKnXus" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
         </main>
-            
-        <div style="clear:both;"></div>
-            
-        <script src="../static/accordion.js"></script>
+        <footer>
+          <img src="../static/cc.logo.large.png" alt="cc">
+        </footer>
       </body>
     </html>
