--- a/office/prezi.html
+++ b/office/prezi.html
@@ -33,16 +33,7 @@
             <a href="../nav/rolunk.html">Rólunk</a>
         <a href="#">Blog</a>
         <a href="../nav/peldak.html">Példák</a>
-        <div class="dropdown">
-          <a href="#">Projektek</a>
-            <div class="dropdown-content">
-              <a href="../mikro/bevelektr.html">Mikroelektronika</a>
-              <a href="../mikro/robotika.html">Robotika</a>
-              <a href="../mikro/dron.html">Drónok</a>
-              <a href="../mikro/mlnnai1.html">Mesterséges intelligencia</a>
-              <a href="../mikro/kvantumszg.html">Kvantumszámítógép</a>
-            </div>
-        </div>
+        <a href="#">Projektek</a>
         <a href="../nav/vizsgak.html">Vizsgák</a>
           </nav>
         </div>
@@ -77,5 +68,8 @@
             <h3>FSF.hu Szabad út - LibreOffice Impress</h3>
             <p><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/videoseries?si=8BeJWnrj8dDRWBYY&amp;list=PLY1W8vaetzJrObUa88RxmkcLnWVJfIIq7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
         </main>
+        <footer>
+          <img src="../static/cc.logo.large.png" alt="cc">
+        </footer>
       </body>
     </html>
