--- a/office/szoveg.html
+++ b/office/szoveg.html
@@ -33,15 +33,7 @@
             <a href="../nav/rolunk.html">Rólunk</a>
         <a href="#">Blog</a>
         <a href="../nav/peldak.html">Példák</a>
-        <div class="dropdown">
-          <a href="#">Projektek</a>
-            <div class="dropdown-content">
-              <a href="../mikro/bevelektr.html">Mikroelektronika</a>
-              <a href="../mikro/robotika.html">Robotika</a>
-              <a href="../mikro/dron.html">Drónok</a>
-              <a href="../mikro/mlnnai1.html">Mesterséges intelligencia</a>
-            </div>
-        </div>
+        <a href="#">Projektek</a>
         <a href="../nav/vizsgak.html">Vizsgák</a>
         <a href="../mikro/kvantumszg.html">Kvantumszámítógép</a>
           </nav>
@@ -97,5 +89,8 @@
           <p>Olvasók: Adobe, Foxit, Sumatra</p>
           <p>Szerkesztők: doPDF, PDF24, PDFsam</p>
         </main>
+        <footer>
+          <img src="../static/cc.logo.large.png" alt="cc">
+        </footer>
       </body>
     </html>
