--- a/perif/mic.html
+++ b/perif/mic.html
@@ -33,16 +33,7 @@
             <a href="../nav/rolunk.html">Rólunk</a>
         <a href="#">Blog</a>
         <a href="../nav/peldak.html">Példák</a>
-        <div class="dropdown">
-          <a href="#">Projektek</a>
-            <div class="dropdown-content">
-              <a href="../mikro/bevelektr.html">Mikroelektronika</a>
-              <a href="../mikro/robotika.html">Robotika</a>
-              <a href="../mikro/dron.html">Drónok</a>
-              <a href="../mikro/mlnnai1.html">Mesterséges intelligencia</a>
-              <a href="../mikro/kvantumszg.html">Kvantumszámítógép</a>
-            </div>
-        </div>
+        <a href="#">Projektek</a>
         <a href="../nav/vizsgak.html">Vizsgák</a>
           </nav>
         </div>
@@ -61,9 +52,8 @@
             <h3>Branch Education - Understanding Sound & Speakers</h3>
             <p><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/videoseries?si=cn7gobYtg3TzU5sv&amp;list=PL6rx9p3tbsMvYWeYUTNuRNMLXn0eyJvub" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
         </main>
-            
-        <div style="clear:both;"></div>
-            
-        <script src="../static/accordion.js"></script>
+        <footer>
+          <img src="../static/cc.logo.large.png" alt="cc">
+        </footer>
       </body>
     </html>
