--- a/ptt/laptopok.html
+++ b/ptt/laptopok.html
@@ -33,16 +33,7 @@
             <a href="../nav/rolunk.html">Rólunk</a>
         <a href="#">Blog</a>
         <a href="../nav/peldak.html">Példák</a>
-        <div class="dropdown">
-          <a href="#">Projektek</a>
-            <div class="dropdown-content">
-              <a href="../mikro/bevelektr.html">Mikroelektronika</a>
-              <a href="../mikro/robotika.html">Robotika</a>
-              <a href="../mikro/dron.html">Drónok</a>
-              <a href="../mikro/mlnnai1.html">Mesterséges intelligencia</a>
-              <a href="../mikro/kvantumszg.html">Kvantumszámítógép</a>
-            </div>
-        </div>
+        <a href="#">Projektek</a>
         <a href="../nav/vizsgak.html">Vizsgák</a>
           </nav>
         </div>
@@ -63,5 +54,8 @@
             <li>Fel tudja sorolni az ismertebb viselhető és egyéb okoseszközöket, valamint azok jellemzőit.</li>
           </ul>
         </main>
+        <footer>
+          <img src="../static/cc.logo.large.png" alt="cc">
+        </footer>
       </body>
     </html>
