--- a/index.html
+++ b/index.html
@@ -38,13 +38,20 @@
 
     <div id="cim">
       <h1>Üdvözöllek a Palkotikum Technologies nyitóoldalán!</h1>
-      <p>Weboldalunk azért jött létre, hogy feldolgozza az informatikai és távközlési alapok I. és II. tantárgy tananyagait, amelyek a számítógépes alapismereteket tartalmazzák.</p>
-      <p>A Projektek menüpont alatti gyakorlati programjainkhoz várjuk a diákok jelentkezését.</p>
-      <p><a href="okt/okt.html">Oktatási anyagok</a></p>
-      <p><a href="okt/szamtechtortenet.html">A számítástechnika története</a></p>
     </div>
 
     <main>
+      <section>
+        <aside>
+          <h2>Bevezető</h2>
+          <p>Weboldalunk azért jött létre, hogy feldolgozza az informatikai és távközlési alapok I. és II. tantárgy tananyagait, amelyek a számítógépes alapismereteket tartalmazzák. Megismerheted a számítógépes architektúrákat, az operációs rendszereket, az irodai szoftvereket, továbbá olyan egzotikumokat, mint a mesterséges intelligencia, mikrokontrollerek és okoseszközök.</p>
+        </aside>
+        <article>
+          <a href="okt/okt.html">Oktatási anyagok</a>
+          <a href="okt/szamtechtortenet.html">A számítástechnika története</a>
+        </article>
+      </section>
+
       <section>
         <aside>
           <h2>Elmélet</h2>
